--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -40,7 +40,7 @@
             {
                 var id = "link-dd-" + link.GetHashCode();
                 <a href="@link.Url" data-dropdown="#@id" class="dropdown-init">@link.Text
-                    <span class="dropdown-arrow">▼</span>
+                    <span class="dropdown-arrow">&#9660;</span>
                 </a>
                 <div id="@id" class="dropdown dropdown-tip">
                     <ul class="dropdown-menu">
@@ -127,7 +127,8 @@
             background-color: @Model.SecondaryColor;
         }
     </style>
-	@if (Model.GoogleAnalyticsPropertyId != null)
+
+    @if (Model.GoogleAnalyticsPropertyId != null)
     {
         <!-- Google Analytics -->
         <script>
@@ -143,7 +144,6 @@
         </script>
         <!-- End Google Analytics -->
     }
-
 </head>
 
 
