--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -139,7 +139,7 @@
 
             ga('create', 'UA-@Model.GoogleAnalyticsPropertyId', 'auto', {'allowLinker': true});
             ga('require', 'linker');
-            ga('linker:autoLink', ['http://54.241.26.242/alabama-demo/', 'http://maps.freshwaternetwork.org/louisiana/', 'http://freshwaternetwork.org/', 'http://maps.freshwaternetwork.org/northeast/' );
+            ga('linker:autoLink', ['http://maps.freshwaternetwork.org/alabama-demo/', 'http://maps.freshwaternetwork.org/louisiana/', 'http://freshwaternetwork.org/', 'http://maps.freshwaternetwork.org/northeast/' );
             ga('send', 'pageview');
         </script>
         <!-- End Google Analytics -->
