--- a/Views/Shared/CustomLaunchPadContent.cshtml
+++ b/Views/Shared/CustomLaunchPadContent.cshtml
@@ -22,7 +22,7 @@
 	}
 </style>
 
-<h2>Louisiana</h2>
+<h2>Mississippi</h2>
 <div>
     Freshwater Network.org is a decision support tool that incorporates the best available science and local data to enable communities and conservation practitioners to identify nature-based solutions for enhancing resilience and reducing risk where possible. For additional project information, visit the <a href="http://freshwaternetwork.org/" target="_blank">Freshwater Network home page</a>.
 </div>
@@ -39,28 +39,6 @@
 	</div>
 </div>	
 <button class="button launch-plugin ls-hide-button" data-plugin-name="HydroFlow"></button>
-
-<div class="button ls-app-button">
-	<div class="ls-app-wraps">
-		<img src="img/OysterFlow.png">
-		<h4 class="color-primary">Oyster Flows</h4>
-	</div>	
-	<div class="ls-app-descs">
-		Description of the Oyster Flows app.
-	</div>
-</div>
-<button class="button launch-plugin ls-hide-button" data-plugin-name="OysterFlow"></button>
-
-<div class="button ls-app-button">
-	<div class="ls-app-wraps">
-		<img src="img/water-quality.png">
-		<h4 class="color-primary">Water Quality</h4>
-	</div>
-	<div class="ls-app-descs">
-		Description of Water Quality app.
-	</div>
-</div>
-<button class="button launch-plugin ls-hide-button" data-plugin-name="water-quality"></button>
 
 <script>
 	$(".ls-app-button").click(function(c){
