add regional planning

--- a/Views/Shared/CustomLaunchPadContent.cshtml
+++ b/Views/Shared/CustomLaunchPadContent.cshtml
@@ -31,6 +31,17 @@
 
 <div class="button ls-app-button">	
 	<div class="ls-app-wraps">
+		<img src="img/regional-planning.png">
+		<h4 class="color-primary">Map Layers</h4>
+	</div>
+	<div class="ls-app-descs">
+		Description of the Map Layers app.
+	</div>
+</div>	
+<button class="button launch-plugin ls-hide-button" data-plugin-name="regional-planning"></button>
+
+<div class="button ls-app-button">	
+	<div class="ls-app-wraps">
 		<img src="img/hydroFlow.png">
 		<h4 class="color-primary">Hydro Flows</h4>
 	</div>
