add hydrologic alterations

--- a/Views/Shared/CustomLaunchPadContent.cshtml
+++ b/Views/Shared/CustomLaunchPadContent.cshtml
@@ -38,7 +38,7 @@
 		Description of the Map Layers app.
 	</div>
 </div>	
-<button class="button launch-plugin ls-hide-button" data-plugin-name="regional-planning"></button>
+<button class="button launch-plugin ls-hide-button" data-plugin-name="map-layers"></button>
 
 <div class="button ls-app-button">	
 	<div class="ls-app-wraps">
@@ -50,6 +50,17 @@
 	</div>
 </div>	
 <button class="button launch-plugin ls-hide-button" data-plugin-name="HydroFlow"></button>
+
+<div class="button ls-app-button">	
+	<div class="ls-app-wraps">
+		<img src="img/hydrologic-alterations.png">
+		<h4 class="color-primary">Hydrologic Alterations</h4>
+	</div>
+	<div class="ls-app-descs">
+		Description of the Hydrologic Alterations app.
+	</div>
+</div>	
+<button class="button launch-plugin ls-hide-button" data-plugin-name="hydrologic-alterations"></button>
 
 <script>
 	$(".ls-app-button").click(function(c){
