update regional planning folder name

--- a/Views/Shared/CustomLaunchPadContent.cshtml
+++ b/Views/Shared/CustomLaunchPadContent.cshtml
@@ -38,7 +38,7 @@
 		Description of the Map Layers app.
 	</div>
 </div>	
-<button class="button launch-plugin ls-hide-button" data-plugin-name="map-layers"></button>
+<button class="button launch-plugin ls-hide-button" data-plugin-name="regional-planning"></button>
 
 <div class="button ls-app-button">	
 	<div class="ls-app-wraps">
