folder names and icon

--- a/Views/Shared/CustomLaunchPadContent.cshtml
+++ b/Views/Shared/CustomLaunchPadContent.cshtml
@@ -53,6 +53,17 @@
 
 <div class="button ls-app-button">	
 	<div class="ls-app-wraps">
+		<img src="img/feature-compare.png">
+		<h4 class="color-primary">Feature Compare</h4>
+	</div>
+	<div class="ls-app-descs">
+		Description of the Feature Compare app.
+	</div>
+</div>	
+<button class="button launch-plugin ls-hide-button" data-plugin-name="feature-compare"></button>
+
+<div class="button ls-app-button">	
+	<div class="ls-app-wraps">
 		<img src="img/hydrologic-alterations.png">
 		<h4 class="color-primary">Hydrologic Alterations</h4>
 	</div>
