--- a/Views/Shared/CustomLaunchPadContent.cshtml
+++ b/Views/Shared/CustomLaunchPadContent.cshtml
@@ -60,7 +60,7 @@
 		Description of the Feature Compare app.
 	</div>
 </div>	
-<button class="button launch-plugin ls-hide-button" data-plugin-name="feature-compare"></button>
+<button class="button launch-plugin ls-hide-button" data-plugin-name="feature_compare"></button>
 
 <div class="button ls-app-button">	
 	<div class="ls-app-wraps">
