--- a/Views/Shared/CustomLaunchPadContent.cshtml
+++ b/Views/Shared/CustomLaunchPadContent.cshtml
@@ -24,7 +24,7 @@
 
 <h2>Mississippi</h2>
 <div>
-    Freshwater Network.org is a decision support tool that incorporates the best available science and local data to enable communities and conservation practitioners to identify nature-based solutions for enhancing resilience and reducing risk where possible. For additional project information, visit the <a href="http://freshwaternetwork.org/" target="_blank">Freshwater Network home page</a>.
+    Freshwater Network.org is a decision support tool that incorporates the best available science and local data to enable communities and conservation practitioners to identify nature-based solutions for enhancing resilience and reducing risk where possible. For additional project information, visit the <a href="https://freshwaternetwork.org/" target="_blank">Freshwater Network home page</a>.
 </div>
 
 <h3>Get Started</h3>
