update get started

--- a/Views/Shared/CustomLaunchPadContent.cshtml
+++ b/Views/Shared/CustomLaunchPadContent.cshtml
@@ -35,7 +35,7 @@
 		<h4 class="color-primary">Map Layers</h4>
 	</div>
 	<div class="ls-app-descs">
-		Description of the Map Layers app.
+		View and interact with freshwater data layers including: dams, rivers, USGS and NOAA stream gages, watersheds, wetlands, groundwater aquifers, water wells, political boundaries, managed areas and land cover.
 	</div>
 </div>	
 <button class="button launch-plugin ls-hide-button" data-plugin-name="regional-planning"></button>
@@ -46,7 +46,7 @@
 		<h4 class="color-primary">Hydro Flows</h4>
 	</div>
 	<div class="ls-app-descs">
-		Description of the Hydro Flows app.
+		A statewide hydrologic model for Louisiana’s watersheds. View and interact with modeled hydrologic flow data for all Louisiana catchments excluding the coastal zone. Over 40 years of flow metrics, including 1, 3, 7, 30 and 90 day minimum and maximum flows, zero flow days and more. View time series data including future climate change and projected water use..
 	</div>
 </div>	
 <button class="button launch-plugin ls-hide-button" data-plugin-name="HydroFlow"></button>
@@ -68,7 +68,7 @@
 		<h4 class="color-primary">Hydrologic Alterations</h4>
 	</div>
 	<div class="ls-app-descs">
-		Description of the Hydrologic Alterations app.
+		Visualize alterations to hydrologic networks such as dams, reservoirs, canals and channelized rivers. We have also conducted alteration assessments for metrics such as dams/mi2, dam storage, channelization and canal intensity for HUC 8 and HUC 12 watersheds, LDEQ subsegments, Parishes and Congressional Districts.
 	</div>
 </div>	
 <button class="button launch-plugin ls-hide-button" data-plugin-name="hydrologic-alterations"></button>
