--- a/Views/Shared/CustomLaunchPadContent.cshtml
+++ b/Views/Shared/CustomLaunchPadContent.cshtml
@@ -24,7 +24,7 @@
 
 <h2>Mississippi</h2>
 <div>
-    Freshwater Network.org is a decision support tool that incorporates the best available science and local data to enable communities and conservation practitioners to identify nature-based solutions for enhancing resilience and reducing risk where possible. For additional project information, visit the <a href="https://freshwaternetwork.org/" target="_blank">Freshwater Network home page</a>.
+    The Mississippi Freshwater Assessment is a multi-tool platform that provides a wealth of information on the quality and quantity of water flowing down Louisiana’s bayous, rivers and streams and the potential effects of future changes in climate and water use on that water flow. For additional project information, visit the <a href="https://freshwaternetwork.org/" target="_blank"><b>freshwatenetwork.org</b></a>.
 </div>
 
 <h3>Get Started</h3>
@@ -46,7 +46,7 @@
 		<h4 class="color-primary">Hydro Flows</h4>
 	</div>
 	<div class="ls-app-descs">
-		Description of the Hydro Flows app.
+		A statewide hydrologic model for Mississippi’s watersheds. 
 	</div>
 </div>	
 <button class="button launch-plugin ls-hide-button" data-plugin-name="HydroFlow"></button>
@@ -57,7 +57,7 @@
 		<h4 class="color-primary">Feature Compare</h4>
 	</div>
 	<div class="ls-app-descs">
-		Description of the Feature Compare app.
+		Compare attribute of up to 3 features.
 	</div>
 </div>	
 <button class="button launch-plugin ls-hide-button" data-plugin-name="feature_compare"></button>
