--- a/Views/Shared/CustomLaunchPadContent.cshtml
+++ b/Views/Shared/CustomLaunchPadContent.cshtml
@@ -35,7 +35,7 @@
 		<h4 class="color-primary">Map Layers</h4>
 	</div>
 	<div class="ls-app-descs">
-		Description of the Map Layers app.
+		View and interact with freshwater data layers including: rivers, USGS and NOAA stream gages, watersheds, wetlands, political boundaries, managed areas and land cover..
 	</div>
 </div>	
 <button class="button launch-plugin ls-hide-button" data-plugin-name="regional-planning"></button>
@@ -57,7 +57,7 @@
 		<h4 class="color-primary">Feature Compare</h4>
 	</div>
 	<div class="ls-app-descs">
-		Compare attribute of up to 3 features.
+		Compare attributes of up to 3 features.
 	</div>
 </div>	
 <button class="button launch-plugin ls-hide-button" data-plugin-name="feature_compare"></button>
